# libtools

./: .gitignore  .gitmodules  CMakeLists.txt  maketdm.bat  maketdm32.bat  maketdm64.bat  modele license.txt
cmake/libogg/: CMakeLists.txt
cmake/libvorbis/: CMakeLists.txt
include/: libtools.h
include/libtools/core/: analogfilter.hpp  audiodriver.hpp  audiostream.hpp  circularpurger.hpp  decoder.hpp  envelope.hpp  fft.hpp  file.h  file.hpp  music.hpp  ncmusicstate.hpp  ncprecomputer.hpp  note.hpp  peak.hpp  production.hpp  settings.hpp  signal.hpp  tempo.hpp  tfdeloor.hpp  variant.hpp  visualsignal.hpp
include/libtools/decoders/: agldecoder.hpp  flacdecoder.hpp  mididecoder.h  mididecoder.hpp  oggvorbisfiledecoder.hpp  settings.hpp
include/libtools/drivers/: 4klang.hpp  bass.hpp  bassproc.h  ffmpegencoder.hpp  winmm.hpp
include/libtools/public/: config.h  singleinstance.hpp
include/libtools/sfml/: debug.hpp  glslrender.hpp  interface.hpp  ncvisualcurves.hpp  ncwordart.hpp  sampler1d.hpp  scope.hpp  window.hpp
include/libtools/shaders/: shaders.h
src/core/: analogfilter.cpp  audiostream.cpp  decoder.cpp  envelope.cpp  fft.cpp  file.c  file.cpp  music.cpp  ncmusicstate.cpp  ncprecomputer.cpp  note.cpp  peak.cpp  settings.cpp  signal.cpp  tempo.cpp  tfdeloor.cpp  variant.cpp  visualsignal.cpp
src/decoders/: agldecoder.cpp  flacdecoder.cpp  mididecoder.cpp  oggvorbisfiledecoder.cpp  settings.cpp
src/drivers/: 4klang.cpp  bass.cpp  bassproc.c  ffmpegencoder.cpp  winmm.cpp
src/sfml/: debug.cpp  glslrender.cpp  interface.cpp  ncvisualcurves.cpp  ncwordart.cpp  sampler1d.cpp  scope.cpp  window.cpp
src/shaders/: fft.c  signal.c  vertex.c
